--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+# Python-generated files
 __pycache__/
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
+
+# Virtual environments
+.venv
 .env
-.deleted/
-aliases/
-collections/
-myenv/
-node_modules/
