--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.121.3",
+    "langchain-text-splitters>=1.0.0",
     "openai>=2.8.1",
     "pdfplumber>=0.11.8",
     "pydantic>=2.12.4",
@@ -13,6 +14,5 @@ dependencies = [
     "python-docx>=1.2.0",
     "python-multipart>=0.0.20",
     "qdrant-client>=1.16.0",
-    "tiktoken>=0.12.0",
     "uvicorn>=0.38.0",
 ]
