--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.121.3",
+    "langchain-google-genai>=3.2.0",
     "langchain-text-splitters>=1.0.0",
     "openai>=2.8.1",
     "pdfplumber>=0.11.8",
