--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,6 @@ dependencies = [
     "python-docx>=1.2.0",
     "python-multipart>=0.0.20",
     "qdrant-client>=1.16.0",
+    "sentence-transformers>=5.1.2",
     "uvicorn>=0.38.0",
 ]
